# Pascal-Compiler

./: CMakeLists.txt  README.md
src/: main.cpp  parser.y  parser_ast.y  parser_bak.y  parser_cast.y  pascal.l  scanner.l  scanner_ast.l  scanner_bak.l
src/ast/: base.hpp  decl.hpp  expr.hpp  identifier.hpp  program.hpp  stmt.hpp  type.hpp
src/codegen/: codegen_context.hpp  decl.cpp  expr.cpp  identifier.cpp  program.cpp  stmt.cpp  type.cpp
src/testast/: ASTvis.cpp  ASTvis.hpp  base.hpp  decl.hpp  expr.hpp  identifier.hpp  main.cpp  make.sh  parser.y  program.hpp  scanner.l  stmt.hpp  type.hpp
src/testast/utils/: ast.hpp
src/testparser/: parser_print.y  scanner_print.l
src/utils/: ASTopt.cpp  ASTopt.hpp  ASTvis.cpp  ASTvis.hpp  ast.hpp  utils.hpp
src/utils/bak/: ASTopt.cpp  ASTopt.hpp
test/: .stmt.pas.swp  AST.pas  a.pas  arg.pas  arr.pas  arr_rec.pas  arr_str.pas  bb.pas  comment.pas  const.pas  controlflow.pas  expr.pas  fib.pas  mat.pas  operation.pas  rec.pas  rec_arr.pas  rec_darr.pas  routine.pas  stmt.pas  str.pas  subrec.pas  substr.pas  sysfunc.pas  table.pas  type_decl.pas
